# RTCW-SP

./: CMakeLists.txt  README.md
src/botai/: ai_dmq3.c
src/botlib/: CMakeLists.txt  be_ai_goal.c  l_precomp.c
src/cgame/: CMakeLists.txt  cg_draw.c  cg_local.h  cg_main.c  cg_newDraw.c  cg_public.h  cg_sound.c  cg_syscalls.c
src/client/: CMakeLists.txt  cl_cgame.c  snd_dma.c
src/game/: CMakeLists.txt  q_shared.h
src/qcommon/: files.c  qfiles.h
src/renderer/: tr_backend.c  tr_image.c  tr_init.c  tr_local.h  tr_shader.c
src/splines/: CMakeLists.txt
src/ui/: CMakeLists.txt  ui_main.c
src/unix/: sdl2_glimp.c  sdl2_snd.c  unix_main.c
